# Personal_AI_Infrastructure

pai-desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
pai-desktop/src/: App.tsx  styles.css
pai-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pai-desktop/src-tauri/capabilities/: default.json
pai-desktop/src-tauri/src/: ai.rs  algorithm.rs  hooks.rs  lib.rs  main.rs  memory.rs  messages.rs  session.rs  settings.rs  skills.rs
pai-desktop/src/components/: ChatPanel.tsx  MemoryPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SkillsPanel.tsx
pai-desktop/src/i18n/: en.ts  index.ts  zh.ts
pai-desktop/src/store/: useI18nStore.ts
